--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@vueuse/core": "^12.3.0",
     "axios": "^1.7.9",
+    "color": "^5.0.0",
     "element-plus": "^2.9.2",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.2",
+    "@types/nprogress": "^0.2.3",
     "@types/path-browserify": "^1.0.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
