--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ VITE_APP_PORT = 4000
 VITE_APP_BASE_API = '/dev-api'
 
 # 线上接口地址
-# VITE_APP_API_URL = http://vapi.youlai.tech
+# VITE_APP_API_URL = http://abc.com
 # 开发接口地址
 VITE_APP_API_URL = http://localhost:4444
 
