--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "color": "^5.0.0",
     "element-plus": "^2.9.2",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^8.2.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.10.2",
     "@types/nprogress": "^0.2.3",
     "@types/path-browserify": "^1.0.3",
