--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^12.3.0",
     "axios": "^1.7.9",
     "color": "^5.0.0",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.9.2",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
