--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^8.2.0",
     "pinia": "^2.3.0",
-    "qiniu-js": "4.0.0-beta.6",
+    "qiniu-js": "3.4.2",
     "unocss": "^0.65.4",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.1",
